--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-maven-plugin</artifactId>
+			<version>9.15.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
